DATABASES/PGADMIN/sqpgadmin100/templates/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: db-srv
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared-pg-data
              mountPath: /var/lib/pgadmin
              subPath: pgadmin
            - name: shared-pg-data
              mountPath: /var/lib/pgadmin/storage/admin_smartquail.io/

          securityContext:
            runAsUser: 5050
            runAsGroup: 5050
            fsGroup: 5050
      volumes:
        - name: shared-pg-data
          persistentVolumeClaim:
            claimName: postgres17-pv-claim-2
