DATABASES/PGADMIN/sqpgadmin100/templates/pgadmin-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: db-srv
  labels:
    app: pgadmin
spec:
  selector:
    app: pgadmin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
