DATABASES/PGADMIN/sqpgadmin100/templates/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: db-srv 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer  
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pgadmin.smartquail.io 
      secretName: pgadmin-smartquail-io-tls  # <--- Corregido al nombre exacto del Secret de Cert-Manager
  rules:
    - host: pgadmin.smartquail.io 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
